08-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jitsi-live-app
  namespace: jitsi-overlord
  labels:
    app.kubernetes.io/name: jitsi-live-app
    app.kubernetes.io/part-of: jitsi-live
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jitsi-live-app
  ports:
  - name: http
    port: 3000
    targetPort: http
    protocol: TCP
